--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -2,6 +2,9 @@ FROM node:14.15.0
 RUN apt-get install gcc
 WORKDIR /node
 
+# Build with debugging symbols.
+# CMD ./configure && make CFLAGS="-g" CPPFLAGS="-g" -j1 -C out BUILDTYPE=Release
+
 # Build with debugging symbols and no optimization.
 # CMD ./configure && make CFLAGS="-g -O0" CPPFLAGS="-g -O0" -j1 -C out BUILDTYPE=Release
 
